<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ringtone">Ring with</string>
    <string name="useSameAccount">useSameAccount</string>
    <string name="app_name">TalkMyPhone</string>
    <string name="set_preferences">Preferences</string>
    <string name="server_host">Server host</string>
    <string name="server_port">Server port</string>
    <string name="service_name">Service name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="your_gmail_address">Your gmail address</string>
    <string name="your_gmail_password">Your gmail password</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="battery_state">Battery state changes</string>
    <string name="incoming_sms">Incoming sms</string>
    <string name="incoming_calls">Incoming calls</string>
    <string name="application_connection">Application connection</string>
    <string name="sms_sent">Sms sent</string>
    <string name="sms_delivered">Sms delivered</string>
    <string name="notify_me_on">Notify me on</string>
    <string name="connection_settings">Connection settings</string>
    <string name="additionnal_settings">Additionnal settings</string>
<string name="notified_address">Address to notify</string>
<string name="use_different_account">Use a different account</string>
</resources>
